  * Change PGP key submission to use an xmlrpc call instead of modifying the 
    database directly.
  * Add an index to dependency resolution for a massive improvement on 
    local system dependency performance on large updates
  * Added ability to get troves w/o file lists from the local database
    and use that when getting troves through the changeset trove source

Changes in 0.62.3:
  * Don't link troves to groups when the branch has changed
  * Link new troves to collections (and new collections to old troves) when 
    a trove isn't installed but a suitable replacement (meaning on the same
    branch) is available
  * Installing changesets w/ not by default from files broke
  * Fix a bug in the kid template that prevented permissions (ACLs) from being
    deleted from a repository.

Changes in 0.62.2:
  * Further reworkings of update code to be fully based on job sets. The
    absolute flag now defines whether a trove is newly installed or if
    it should be an update from an existing trove (when possible). Network
    changesets and changesets from files are treated almost identically now.
  * Swapped lock terminology for pin
  * Changed table names in database schema to better match the repository
    schema

Changes in 0.62.1:
  * UtilizeGroup fixed
  * conary updateall fixed
  * Disable SHA-1 integrity checks when trove changesets don't include
    files in various places
  * conary now prevents you from cooking empty groups

Changes in 0.62.0:
  * Initial OpenPGP (RFC 2440) based signature support has been
    added. Conary reads public keys from ~/.gnupg/pubring.gpg and
    /etc/conary/pubring.pgp.  Conary reads private keys from
    ~/.gnupg/secring.pgp.  Setting the "signatureKey" configuration
    variable to a key ID will select which key to use from the
    keyring. If signatureKey is not set, and there is a valid private
    keyring, the first key on the keyring will automatically be used